--- a/Python_project/templates/thomas_gia.html
+++ b/Python_project/templates/thomas_gia.html
@@ -309,3 +309,6 @@
     window.onload = initTest;
 </script>
 {% endblock %}
+
+<!-- Link to external Thomas Gia JS file -->
+<script src="/static/js/thomas_gia.js"></script>
